refactor: change of images, projects, skills and contact pages

--- a/src/app/shared/components/contact/contact.component.html
+++ b/src/app/shared/components/contact/contact.component.html
@@ -1,41 +1,36 @@
 <section id="contact" class="min-h-screen bg-primary text-secondary flex flex-col md:flex-row">
-  <!-- IMAGE -->
   <div class="w-full md:w-1/2">
     <img
-      ngSrc="assets/images/contact.jpg"
+      ngSrc="assets/images/pavan-trikutam-71CjSSB83Wo-unsplash.jpg"
       alt="Contact Image"
-      width="799"
-      height="800"
-      class="h-64 sm:h-80 md:h-full w-full object-cover cursor-pointer"
+      width="4401"
+      height="2934"
+      class="h-64 sm:h-80 md:h-full w-full object-cover object-bottom cursor-pointer"
     />
   </div>
 
-  <!-- CONTENT -->
   <div
     class="flex flex-col justify-around items-center w-full md:w-1/2 py-10 px-6 text-center md:text-left"
   >
     <div class="flex flex-col gap-4 w-full">
-      <!-- CONTACT INFO -->
       <div class="flex flex-col sm:flex-row justify-between text-base sm:text-lg mb-4">
         <a
           href="tel:{{ phone }}"
-          class="mb-2 sm:mb-0 decoration-secondary hover:text-secondary/80 transition-colors no-underline"
+          class="mb-2 sm:mb-0 decoration-secondary hover:text-secondary/80 hover:underline transition-colors no-underline"
         >
           {{ phone }}
         </a>
         <a
           href="mailto:{{ email }}"
-          class="decoration-secondary hover:text-secondary/80 transition-colors"
+          class="decoration-secondary hover:text-secondary/80 hover:underline transition-colors"
         >
           {{ email }}
         </a>
       </div>
 
-      <!-- TITLE -->
       <h2 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl uppercase text-center">CONTACT</h2>
     </div>
 
-    <!-- SUBTEXT -->
     <h6 class="uppercase text-lg sm:text-xl md:text-2xl mt-6">
       Let’s create something beautiful together.
     </h6>
