--- a/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
+++ b/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
@@ -1,5 +1,5 @@
 <section id="portfolio-highlights" class="min-h-screen bg-primary text-secondary">
-  <div class="flex flex-col md:flex-row md:h-screen h-full justify-center pb-4">
+  <div class="flex flex-col md:flex-row md:h-screen h-full justify-center">
     <div class="flex flex-col md:w-1/2 max-h-screen h-full">
       <div class="flex h-1/2">
         <div class="md:w-1/2 h-full">
