feat: add section-observer.directive.ts and section-service.ts to handle navigation colors between components

--- a/src/app/shared/components/contact/contact.component.html
+++ b/src/app/shared/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact" class="min-h-screen bg-primary text-secondary flex flex-col md:flex-row">
+<section id="contact" appSectionObserver sectionId="contact" class="min-h-screen bg-primary text-secondary flex flex-col md:flex-row">
   <div class="w-full md:w-1/2">
     <img
       ngSrc="assets/images/pavan-trikutam-71CjSSB83Wo-unsplash.jpg"
