--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -1,4 +1,4 @@
-<section class="min-h-screen bg-secondary text-primary">
+<section id="content" sectionId="content" appSectionObserver class="min-h-screen bg-secondary text-primary">
   <div class="flex flex-col max-md:items-center md:flex-row justify-center gap-4 px-10 pt-16 w-full h-full">
     <div class="md:w-1/2 flex flex-col items-end gap-10">
       <h1
