--- a/src/app/shared/components/home/home.html
+++ b/src/app/shared/components/home/home.html
@@ -1,4 +1,4 @@
-<section class="relative h-screen overflow-hidden">
+<section appSectionObserver sectionId="home" id="home" class="relative h-screen overflow-hidden">
   <div class="absolute inset-0">
     @if (!isMobile){
     <!--dikey-->
