--- a/src/app/shared/components/projects/projects.component.html
+++ b/src/app/shared/components/projects/projects.component.html
@@ -1,4 +1,4 @@
-<section class="min-h-screen md:h-screen bg-primary text-secondary">
+<section id="projects" appSectionObserver sectionId="projects" class="min-h-screen md:h-screen bg-primary text-secondary">
   <div
     class="h-full grid gap-4 py-4
                grid-cols-1 sm:grid-cols-2 md:grid-cols-3
@@ -16,7 +16,6 @@
           [height]="project.height"
         >
 
-        <!-- Overlay -->
         <div
           class="absolute inset-0 group-hover:bg-black/50 bg-opacity-0 transition-all duration-500 flex items-center justify-center gap-6">
           <a
