--- a/src/app/shared/components/skills/skills.component.html
+++ b/src/app/shared/components/skills/skills.component.html
@@ -1,7 +1,6 @@
-<section id="skills" class="min-h-screen bg-secondary text-primary flex flex-col justify-center">
+<section id="skills" sectionId="skills" appSectionObserver class="min-h-screen bg-secondary text-primary flex flex-col justify-center">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 gap-6 p-6 md:p-10">
 
-    <!-- SKILLS TITLE -->
     <div class="flex rounded-xl p-8 max-md:items-center max-md:justify-center
                 sm:col-span-2 md:col-span-1">
       <h2 class="text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-bold">
