--- a/src/app/shared/components/work-experience/work-experience.component.html
+++ b/src/app/shared/components/work-experience/work-experience.component.html
@@ -1,4 +1,4 @@
-<section id='work-experience' class="md:min-h-screen bg-secondary text-primary">
+<section id='work-experience' appSectionObserver sectionId='work-experience' class="md:min-h-screen bg-secondary text-primary">
 
   <div class="flex max-md:flex-col-reverse flex-col justify-around min-h-screen gap-6 md:gap-10 p-5 pt-20">
     <div class="flex max-md:flex-col flex-wrap max-md:gap-8">
