--- a/src/app/shared/components/about-me/about-me.component.html
+++ b/src/app/shared/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<section id="about-me" class="h-screen bg-primary text-secondary">
+<section id="about-me" sectionId="about-me" appSectionObserver class="h-screen bg-primary text-secondary">
   <div class="flex flex-col sm:flex-row items-center h-full relative">
     <div class="w-[10%] h-full flex-1 hidden md:flex">
       <img ngSrc="assets/images/kapadokya.jpeg" alt="" class="h-full object-cover object-right" width="2000" height="1500">
