--- a/src/app/shared/components/navigation/navigation.html
+++ b/src/app/shared/components/navigation/navigation.html
@@ -1,7 +1,7 @@
 <nav class="fixed top-0 w-full p-4 border-b z-120 "
      [ngClass]="{
        ' text-primary border-primary': isContentSection || isWorkExperienceSection || isSkillsSection,
-       ' text-secondary border-secondary': isAboutMeSection || isPortfolioHighlightsSection || isContactSection,
+       ' text-secondary border-secondary': isAboutMeSection || isPortfolioHighlightsSection || isContactSection || isProjectsSection,
        'scrolled': isScrolled
      }">
   <div class="flex justify-between items-center text-sm tracking-wider px-4">
