--- a/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
+++ b/src/app/shared/components/portfolio-highlights/portfolio-highlights.component.html
@@ -1,12 +1,12 @@
-<section id="portfolio-highlights" class="min-h-screen bg-primary text-secondary">
+<section id="portfolio-highlights" appSectionObserver sectionId="portfolio-highlights" class="min-h-screen bg-primary text-secondary">
   <div class="flex flex-col md:flex-row md:h-screen h-full justify-center">
     <div class="flex flex-col md:w-1/2 max-h-screen h-full">
       <div class="flex h-1/2">
         <div class="md:w-1/2 h-full">
-          <img ngSrc="assets/images/cluj.jpeg" class="h-full object-cover" alt="Portfolio Image 1" width="1600" height="2400">
+          <img ngSrc="assets/images/cluj.jpeg" class="h-full object-cover" alt="Portfolio Image 1" width="1200" height="1600">
         </div>
         <div class="md:w-1/2 h-full">
-          <img ngSrc="assets/images/port-new.jpeg" class="h-full object-cover" alt="Portfolio Image 2" width="1600" height="2400">
+          <img ngSrc="assets/images/port-new.jpeg" class="h-full object-cover" alt="Portfolio Image 2" width="1536" height="2048">
         </div>
       </div>
       <div class="md:h-1/2 z-20 p-10" appAnimateOnView [animateOnce]="true" (isVisibleChange)="onPortfolioHighlightsChange($event)">
