--- a/src/app/shared/components/vision-mission/vision-mission.component.html
+++ b/src/app/shared/components/vision-mission/vision-mission.component.html
@@ -1,4 +1,4 @@
-<section id="vision" class="min-h-screen bg-primary text-secondary">
+<section id="vision-mission" appSectionObserver sectionId="vision-mission" class="min-h-screen bg-primary text-secondary">
   <div class="flex flex-col items-center justify-around px-5 md:px-20 h-screen gap-5">
     <div class="flex flex-col xl:flex-row gap-5 md:gap-10 w-full sm:max-md:w-3/4 ">
       <h1 class="text-4xl sm:text-7xl text-center md:text-end md:text-10xl uppercase w-full md:w-1/3" appAnimateOnView
