--- a/src/app/shared/components/content/content.html
+++ b/src/app/shared/components/content/content.html
@@ -20,48 +20,16 @@
 
     <div class="flex flex-col justify-center p-4 w-full sm:w-3/4 md:w-1/2 text-lg md:text-xl cursor-pointer">
       <ul appAnimateOnView (isVisibleChange)="isUlVisibleChange($event)">
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-1"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a class="flex justify-between w-full" href="#about-me"
-            ><span>01</span> <span>about me</span>
-          </a>
-        </li>
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-2"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a href="#vision" class="flex justify-between"
-            ><span>02</span> <span>vision & mission</span></a
+        @for (content of contents(); let i = $index; track content.id) {
+          <li
+            class="border-b-2 border-primary p-4 animate-delay-{{i + 1}}"
+            [ngClass]="{ 'animate-slide-down': isUlVisible }"
           >
-        </li>
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-3"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a href="#work-experience" class="flex justify-between"
-            ><span>03</span> <span>work experience</span></a
-          >
-        </li>
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-4"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a href="#portfolio-highlights" class="flex justify-between"><span>04</span> <span>portfolio highlights</span></a>
-        </li>
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-5"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a href="#skills" class="flex justify-between"><span>05</span> <span>skills</span></a>
-        </li>
-        <li
-          class="border-b-2 border-primary p-4 animate-delay-6"
-          [ngClass]="{ 'animate-slide-down': isUlVisible }"
-        >
-          <a href="#contact" class="flex justify-between"><span>06</span> <span>contact</span></a>
-        </li>
+            <a class="flex justify-between w-full" href="#{{content.title}}"
+            ><span>0{{i + 1}}</span> <span>{{content.description}}</span>
+            </a>
+          </li>
+        }
       </ul>
     </div>
   </div>
